Fixed teleporter hacks