@@ -25,24 +25,20 @@ public class PortalRequestAI extends PortalAI {
 
 	@Override
 	protected void handleUseItemFinish(Player player) {
-		if (teleportTemplate != null) {
-			final TeleportLocation loc = teleportTemplate.getTeleLocIdData().getTelelocations().get(0);
-			if (loc != null) {
-				TelelocationTemplate locationTemplate = DataManager.TELELOCATION_DATA.getTelelocationTemplate(loc.getLocId());
-				RequestResponseHandler<Npc> portal = new RequestResponseHandler<Npc>(getOwner()) {
+		TeleportLocation firstLoc = teleportTemplate.getTeleLocIdData().getTelelocations().getFirst();
+		TelelocationTemplate locationTemplate = DataManager.TELELOCATION_DATA.getTelelocationTemplate(firstLoc.getLocId());
+		RequestResponseHandler<Npc> portal = new RequestResponseHandler<>(getOwner()) {
 
-					@Override
-					public void acceptRequest(Npc requester, Player responder) {
-						TeleportService.teleport(teleportTemplate, loc.getLocId(), responder, requester, TeleportAnimation.JUMP_IN);
-					}
-
-				};
-				long transportationPrice = PricesService.getPriceForService(loc.getPrice(), player.getRace());
-				if (player.getResponseRequester().putRequest(SM_QUESTION_WINDOW.STR_TELEPORT_NEED_CONFIRM, portal)) {
-					PacketSendUtility.sendPacket(player,
-						new SM_QUESTION_WINDOW(SM_QUESTION_WINDOW.STR_TELEPORT_NEED_CONFIRM, getObjectId(), 5, locationTemplate.getL10n(), transportationPrice));
-				}
+			@Override
+			public void acceptRequest(Npc requester, Player responder) {
+				TeleportService.teleport(responder, firstLoc, TeleportAnimation.JUMP_IN);
 			}
+
+		};
+		long transportationPrice = PricesService.getPriceForService(firstLoc.getPrice(), player.getRace());
+		if (player.getResponseRequester().putRequest(SM_QUESTION_WINDOW.STR_TELEPORT_NEED_CONFIRM, portal)) {
+			PacketSendUtility.sendPacket(player,
+				new SM_QUESTION_WINDOW(SM_QUESTION_WINDOW.STR_TELEPORT_NEED_CONFIRM, getObjectId(), getObjectTemplate().getTalkDistance(), locationTemplate.getL10n(), transportationPrice));
 		}
 	}
 }
